secondfile/objects/CustomerSite__c.object
<CustomObject>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Structure__c</fullName>
        <label>Structure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_ID__c</fullName>
        <label>Temp ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Value__c</fullName>
        <label>Tier Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transport_Type__c</fullName>
        <label>Transport Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ethernet</fullName>
                </value>
                <value>
                    <fullName>PrivateLine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Site_ID__c</fullName>
        <description>Site ID for reference in BID migration To transfer site id from sp products to siteQuote object.</description>
        <label>Unique Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urbanization__c</fullName>
        <label>Urbanization</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VASACallFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VASACallFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VASAResponse__c</fullName>
        <label>VASA Response</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VASA_LEC__c</fullName>
        <label>Original VASA LEC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VASA_Request_Time__c</fullName>
        <label>Service Availability Request Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VASA_Response_Status__c</fullName>
        <label>Service Availability Response Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADDRESS RECORD CREATED</fullName>
                    <default>true</default>
                    <label>ADDRESS RECORD CREATED</label>
                </value>
                <value>
                    <fullName>ADDRESS EXACT MATCH</fullName>
                </value>
                <value>
                    <fullName>ADDRESS NO MATCH</fullName>
                </value>
                <value>
                    <fullName>POSSIBLE MATCHES</fullName>
                </value>
                <value>
                    <fullName>SERVICE AVAILABILITY CHECKED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VOIP_Availability_Flag__c</fullName>
        <label>VOIP Availability Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOIP_Local_Availability_Indicator__c</fullName>
        <label>VOIP Local Availability Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VirtualTN_Availability_Indicator__c</fullName>
        <label>VirtualTN Availability Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code_Extension__c</fullName>
        <label>Zip Code Extension</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Geo_Code__c</fullName>
        <label>Zip Geo Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isRDS_Saved_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>set to true of the RDS details are saved</description>
        <label>isRDS Saved Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>popCLLI__c</fullName>
        <description>to save popCLLI obtained from SWPO request.</description>
        <label>popCLLI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>swcCLLI__c</fullName>
        <description>to save swcCLLi details obtained from SWPO.</description>
        <label>swcCLLI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>AT&amp;T Customer Site</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Site_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Service_Availability_Response__c</columns>
        <columns>End_Customer__c</columns>
        <columns>Address_Line__c</columns>
        <columns>Speed_Physical_Value__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>VASA_Response_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Car</fullName>
        <columns>NAME</columns>
        <columns>Service_Availability_Response__c</columns>
        <columns>Service_Types__c</columns>
        <columns>Alternate_Access_ITPA_Request_Time__c</columns>
        <columns>Alternate_Access_ITPA_Response__c</columns>
        <columns>Alternate_Access_ITPA_Response_Status__c</columns>
        <columns>VASA_Request_Time__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VASA_Response_Status__c</field>
            <operation>equals</operation>
            <value>ADDRESS EXACT MATCH</value>
        </filters>
        <filters>
            <field>Alternate_Access_ITPA_Process_Completed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Alternate_Access_ITPA_Response_Status__c</field>
            <operation>notEqual</operation>
            <value>200</value>
        </filters>
        <label>car</label>
    </listViews>
    <listViews>
        <fullName>Freedom_search</fullName>
        <columns>NAME</columns>
        <columns>End_Customer__c</columns>
        <columns>Alternate_Access_ITPA_Response__c</columns>
        <filterScope>Everything</filterScope>
        <label>Freedom search</label>
    </listViews>
    <nameField>
        <displayFormat>ADD-{000000}</displayFormat>
        <label>Site #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AT&amp;T Customer Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>